# bagidea-office

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  RELEASING.md  build-linux.sh  build-mac.sh  run-linux.sh
.github/workflows/: release-binaries.yml
cli/: bagidea.js
daemon/: channels.js  constants.js  kill-tree.js  macproj.sh  overlay.html  plugins.js  pluginshub.html  providers.js  proxy.js  server.js  workflow.html
daemon/i18n-seed/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  pt.json  ru.json  vi.json  zh.json
daemon/tests/: api.test.js  kill-tree.test.js  providers.test.js  proxy.test.js  retrieval.test.js
daemon/workflow-examples/: daily-ai-news.json  meeting-notes.json  website-uptime.json
docs/guide/: agents.md  cost-and-vision.md  getting-started.md  models.md  plugins.md  troubleshooting.md  updates.md  voice-feed.md
godot/: project.godot
godot/scenes/: office_floor.tscn
godot/scripts/: agent_manager.gd  agent_sprite.gd  dog_sprite.gd  grid_world.gd  hud.gd  layout_loader.gd  map_editor.gd  office_floor.gd  probe.gd  rec_ball.gd  sfx.gd  world_builder.gd
godot/shaders/: grass_blade.gdshader
installer/: install-linux.sh  install.ps1  uninstall-mac.sh  uninstall.ps1  update-linux.sh  update-mac.sh  update.ps1  wire-hooks.ps1  wire-hooks.sh
npm/: cli.js  package.json
npm-bagidea/: README.md  package.json
plugins/music/: panel.html
shell/: Cargo.toml
shell/src/: main.rs
web/: docs.html  index.html  plugins.json
web/assets/: i18n.js  site.css
web/guides/: ai-features.md  (+2 more)
(+12 files in other folders)
