[package]
name = "bagidea-office-shell"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
tao = "0.35.3"
wry = { version = "0.55.1", features = ["devtools"] }
image = { version = "0.25", default-features = false, features = ["png"] }
windows-sys = { version = "0.59", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }

[build-dependencies]
winres = "0.1"
